<resources>
    <string name="app_name">Coffee</string>
    <string name="app_name_kor">아아</string>
    <!-- app -->
    <string name="permission_rationale_location">내주변 카페를 찾기위해서는 위치권한을 승인하셔야 서비스이용이 가능합니다.</string>
    <string name="location_permission_denied">내주변 카페를 찾기위해서는 위치권한을 승인하셔야 서비스이용이 가능합니다. 위치권한을 승인하시고 다시 시작하세요\n권한이 거부되어있다면, System Settings &gt; Apps &gt; \'아아\' 에서 권한을 승인하실수 있습니다.</string>

    <string name="permission_rationale_call">카페에 전화를 걸기위해서는 전화 권한을 승인하셔야 서비스이용이 가능합니다.</string>
    <string name="call_permission_denied">카페에 전화를 걸기위해서는 전화 권한을 승인하셔야 서비스이용이 가능합니다. 위치권한을 승인하시고 다시 시작하세요\n권한이 거부되어있다면, System Settings &gt; Apps &gt; \'아아\' 에서 권한을 승인하실수 있습니다.</string>
    <string name="permission_required_toast">권한을 승인하셔야 서비스이용이 가능합니다.</string>

    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">아아 주문</string>

    <!-- nav, menu -->
    <string name="nav_header_desc">이미지</string>
    <string name="nav_header_title">로그인해주세요</string>
    <string name="nav_header_subtitle">0</string>
    <string name="menu_myinfo">내 정보</string>
    <string name="menu_myorders">주문조회</string>
    <string name="menu_settings">설정(fcm토큰설정)</string>
    <string name="menu_license">라이센스</string>
    <string name="menu_login">로그인</string>
    <string name="menu_logout">로그아웃</string>

    <!-- 주문 -->
    <string name="shop_btn_map">지도보기</string>
    <string name="shop_btn_call">전화걸기</string>
    <string name="order_btn_cart_keep">담아두기</string>
    <string name="order_btn_cart_open">장바구니</string>
    <string name="order_category_text1">기본</string>
    <string name="order_text_category2">추가선택</string>
    <string name="order_text_category3">수량</string>
    <string name="order_text_cautionmessage">※방문까지 5분이상이 소요되지 않게 주의해주세요</string>
    <string name="sign_plus">+</string>
    <string name="sign_minus">-</string>
    <string name="cart_name">장바구니</string>
    <string name="cart_del">삭제</string>

    <string name="cart_btn_cart_pay">결제하기</string>


    <!-- 로그인 및 회원가입 -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">아이디 (8문자이상)</string>
    <string name="prompt_password">비밀번호 (8문자이상)</string>
    <string name="prompt_password_check">비밀번호 체크</string>
    <string name="action_sign_in">회원등록</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="welcome">"님 환영합니다. "</string>
    <string name="invalid_username">허용되지 않은 아이디입니다.</string>
    <string name="invalid_input">허용되지 않은 입력입니다.</string>
    <string name="invalid_password">패스워드는 8 문자이상필요합니다.</string>
    <string name="invalid_password2">패스워드가 틀립니다.</string>
    <string name="login_failed">"로그인에 실패하였습니다."</string>

    <!-- 주문 상세-->
    <string name="order_detail_totalpay">총 결제금액</string>
    <string name="order_detail_check">주문확인</string>
    <string name="order_detail_cancel">주문취소</string>
    <string name="order_detail_cautionmessage">※음료 제작중으로 취소가 비활성됩니다.</string>
    <string name="order_detail_point">마일리지 할인</string>
    <string name="order_detail_discount_text">할인정보</string>
    <string name="order_detail_totalmenu">메뉴합계</string>
    <string name="order_detail_menu_name">메뉴</string>
    <string name="order_detail_menu_quan">수량</string>
    <string name="order_detail_menu_price">금액</string>
    <string name="order_detail_list_text">주문서</string>
    <string name="order_detail_address">주소</string>
    <string name="order_detail_shopname">가게명</string>
    <string name="order_detail_text">주문정보</string>


    <!-- 라이센스 -->
    <string name="title_activity_license">LicenseActivity</string>
    <string name="Google_Firebase_Title">Google Firebase</string>
    <string name="Google_Firebase_Content">Cloud Messaging\nCopyright 2016 Google Inc,.\nApache License 2.0</string>
    <string name="Crashlytics_Title">Crashlytics</string>
    <string name="Crashlytics_Content">Copyright 2016 Google Inc,.\nThe MIT License (MIT)</string>
    <string name="Junit_Title">Junit</string>
    <string name="Junit_Content">Copyright © 2002-2018 JUnit.\nEclipse Public License</string>
    <string name="Junit_Platform_Runner_Title">Junit Platform Runner</string>
    <string name="Junit_Platform_Runner_Content">Eclipse Public License v2.0</string>
    <string name="Espresso_Core_Title">Espresso Core</string>
    <string name="Espresso_Core_Content">Copyright (C) 2014 The Android Open Source Project\nApache License 2.0</string>
    <string name="Apache_License_Version_2_0_Title">Apache License Version 2.0</string>
    <string name="Apache_License_Version_2_0_Content">nApache License\nVersion 2.0, January 2004\nhttp://www.apache.org/licenses/</string>
    <string name="MIT_License_Title">MIT License</string>
    <string name="MIT_License_Content">MIT License</string>
    <string name="Eclipse_Public_License_1_0_Title">Eclipse Public License 1.0</string>
    <string name="Eclipse_Public_License_1_0_Content"></string>
    <string name="Eclipse_Public_License_V2_0_Title">Eclipse Public License - v 2.0</string>
    <string name="Eclipse_Public_License_V2_0_Content"></string>

</resources>
