<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorBlack"
                android:text="@string/order_detail_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_detail_shopname" />

                <TextView
                    android:id="@+id/order_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="닉네임 기입" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_detail_address" />

                <TextView
                    android:id="@+id/order_detail_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="000-0000-0000" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorBlack"
                android:text="@string/order_detail_list_text" />

            <View style="@style/divider"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/order_detail_menu_name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_detail_menu_quan" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_detail_menu_price" />
            </LinearLayout>

            <View style="@style/divider"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <ListView
                android:visibility="gone"
                android:id="@+id/order_detail_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/fragment_detail"/>
            <LinearLayout
                android:id="@+id/order_detail_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
            <View style="@style/divider"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/order_detail_totalmenu" />

                <TextView
                    android:id="@+id/order_detail_total_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="0" />

                <TextView
                    android:id="@+id/order_detail_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="0,000" />

            </LinearLayout>

            <View style="@style/divider"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="20dp"
                android:text="@string/order_detail_discount_text" />

            <View style="@style/divider"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/order_detail_point" />
                <TextView
                    android:id="@+id/order_detail_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="0" />

            </LinearLayout>

            <View
                style="@style/divider"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/order_detail_totalpay" />

                <TextView
                    android:id="@+id/order_detail_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">
                <Button
                    android:id="@+id/order_detail_btn_check"
                    style="@style/btn_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_detail_check" />
                <Button
                    android:id="@+id/order_detail_btn_cancel"
                    style="@style/btn_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_detail_cancel" />
                <TextView
                    android:id="@+id/order_detail_caution"
                    android:text="@string/order_detail_cautionmessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>