<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Create by platform eight on 2020. 6. 9.
  ~  Copyright (c) 2019. platform eight. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cart_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="음료이름" />

        <TextView
            android:id="@+id/cart_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:text="@string/cart_del"
            android:textColor="@color/colorBrown"
            android:clickable="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/cart_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="음료정보" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cart_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="욤료가격" />

        <Button
            android:id="@+id/btn_minus"
            style="@style/btn_theme"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/sign_minus" />

        <TextView
            android:id="@+id/cart_quan"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.25"
            tools:text="1" />

        <Button
            android:id="@+id/btn_plus"
            style="@style/btn_theme"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/sign_plus" />
    </LinearLayout>
</LinearLayout>