<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_Id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:privateImeOptions="defaultinputmode=english"
            android:hint="@string/prompt_email" />

        <Button
            android:id="@+id/register_btn_check"
            style="@style/btn_theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:enabled="false"
            android:text="중복확인" />

    </LinearLayout>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password_check"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="이름"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName"
        android:privateImeOptions="defaultinputmode=korean" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="휴대전화 번호"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="phone"
        android:phoneNumber="true"/>

    <Button
        android:id="@+id/register_btn_ok"
        style="@style/btn_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:text="회원등록" />
</LinearLayout>